--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 "scripts": {
+  "dev": "vite",
   "build": "vite build"
 }
+
 "devDependencies": {
   "vite": "...",
   "@vitejs/plugin-react": "..."
